--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,24 +5,98 @@
 <head>
 <meta charset="UTF-8" />
 <title>Insert title here</title>
+
+<!-- Bootstrap Core CSS -->
+<link href="/css/bootstrap.css" rel="stylesheet" />
+<!-- jquery js-->
+<script src="/js/jquery/jquery.js" th:src="@{/js/jquery/jquery.js}"></script>
+<script type="text/javascript">
+		function login(){
+			var loginname = $("#username").val();
+			var loginpswd = $("#password").val();
+			
+			$.ajax({
+				"url":"[[@{/user/login}]]",
+				"type":"post",
+				"data":{
+					"username":loginname,
+					"password":loginpswd
+					
+				},
+				"beforeSend":function(){
+					alert("abcd");
+					/* 
+					$.messager.progress();	
+					*/
+					return true;
+				},
+				"success":	function(result){
+					
+					if(result.retCode == '000000'){
+						alert("登录成功");
+					}else{
+						$("#errorMsg").html(result.retMsg);
+						$("#errorMsg").show();
+					}
+					
+					/* 
+					//关闭进度条
+					$.messager.progress("close");
+					 */
+					/*  
+			    	//验证结果
+			    	var jsonData=eval("("+result+")");
+					alert(jsonData); */				
+					/* 
+					if(r.success){
+						$.messager.alert("PMES系统提示", "派障成功", "info",function(){
+							$("#bugticketTable").datagrid("reload");
+						});
+					}else{
+						$.messager.alert("PMES系统提示", "排障失败", "error");
+					 
+					}
+					*/
+				}
+				
+			});
+		}
+</script>
+
 </head>
 <body>
 	<h1 th:inlines="text">主页</h1>
-	
+
 	<h1 th:inlines="text">用户登录</h1>
-	<form  th:action="@{/user/login}" method="post" >
+	<form th:action="@{/user/login}" method="post">
 		<p>
 			用户名: <input type="text" id="username" name="username" />
 		</p>
 		<p>
-			密码: <input type="text" id="password"  name="password" />
+			密码: <input type="text" id="password" name="password" />
 		</p>
 		<p>
-			<input type="submit" value="提交" />
+			<input type="button" onclick="login();" value="提交" />
 		</p>
-	</form>
-	
-	
 		
+		<div id="errorMsg" class="alert alert-danger text-center" style="display:none;"></div>
+	</form>
+
+
+
+
+
+
+	<div>
+		<p class="pt-lg text-center">需要注册？</p>
+		<a href="/register" class="btn btn-block btn-default">现在就注册</a>
+	</div>
+	
+	
+	
+	
+
+	
+
 </body>
 </html>
