--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -6,16 +6,16 @@
 <title>Bootstrap 实例 -超大屏幕-1</title>
 <!-- css -->
 <!-- css_bootstrap -->
-<link rel="stylesheet"																
-	href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" th:href="@{/frontFrame/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" th:href="@{/js/bootstrap/bootstrap.min.js}">
 	
 	
 <!-- js -->	
 <!-- js_bootstrap -->
-<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js" th:src="@{/frontFrame/jquery/js/jquery.min.js}"></script>
+<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js" th:src="@{/js/jquery/jquery.min.js}"></script>
 <!-- js_jquery -->
 <script
-	src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" th:src="@{/frontFrame/bootstrap/js/bootstrap.min.js}"></script>
+	src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" th:src="@{/js/bootstrap/bootstrap.min.js}"></script>
 	
 <style type="text/css">
 		body { 
@@ -174,7 +174,7 @@
 	        <a class=""  href="/join?plan=business&amp;setup_organization=true&amp;source=business-page">Sign up your team <span class="">&rarr;</span></a>    
 	    </div>
 	</div>
-	
+
 
 </body>
 </html>
