提交日志文件

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,15 +6,13 @@
 <title>Bootstrap 实例 -超大屏幕-1</title>
 <!-- css -->
 <!-- css_bootstrap -->
-<link rel="stylesheet"																
-	 th:href="@{/frontFrame/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/frontFrame/bootstrap/css/bootstrap.min.css}">
 
 <!-- js -->	
 <!-- js_bootstrap -->
 <script th:src="@{/frontFrame/jquery/js/jquery.min.js}"></script>
 <!-- js_jquery -->
-<script
-	 th:src="@{/frontFrame/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/frontFrame/bootstrap/js/bootstrap.min.js}"></script>
 	
 <style type="text/css">
 		body { 
@@ -101,7 +99,7 @@
                 
                 <!--  -->
                 <ul class="nav navbar-nav navbar-right">  
-		            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>  登陆</a></li>
+		            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>  登陆</a></li>
 		            <li><a href="#"><span class="glyphicon glyphicon-user"></span>  注册</a></li>  
 		        </ul>
                
