--- a/src/main/resources/templates/loginbak.html
+++ b/src/main/resources/templates/loginbak.html
@@ -72,37 +72,19 @@
 </head>
 <body>
 	<h2 style="text-align:center">用户登录-请登录</h2>
-	<!-- blog-content-container -->
-	<div class="container">
-		<form  th:action="@{/user/login}" method="post">
-			<div class="form-group col-md-4 col-md-offset-4">
-				<label for="username" class="col-form-label">账号</label>
-				<input type="text" class="form-control" id="username" name="username" maxlength="50" placeholder="请输入账号">
-	 
-			</div>
-			<div class="form-group col-md-4 col-md-offset-4">
-				<label for="password" class="col-form-label">密码</label>
-				<input type="password" class="form-control" id="password" name="password" maxlength="30" placeholder="请输入密码" >
-			</div>
-			<div class="form-group col-md-4 col-md-offset-4">
-				 <input type="checkbox" name="remember-me"> 记住我
-			</div>
-			<div class="form-group col-md-4 col-md-offset-4">
-				<button type="submit" class="btn btn-primary">登录</button>
-			</div>
- 			<div class="form-group col-md-4 col-md-offset-4" th:if="${retCode}">
-				<p class="text-center">Center aligned text.</p>
-			</div>
-			
-			<div class="form-group col-md-4 col-md-offset-4">
-				<p class="text-left"><small>需要注册？</small></p>
-				<a href="/register" class="btn btn-block btn-default">现在就注册</a>
-			</div>
-		</form>
+	<form th:action="@{/user/login}" method="post">
+		<p>
+			用户名: <input type="text" id="username" name="username" />
+		</p>
+		<p>
+			密码: <input type="text" id="password" name="password" />
+		</p>
+		<p>
+			<input type="button" onclick="login();" value="提交" />
+		</p>
 		
-		
-    </div> <!-- /container -->
-    
-
+		<div id="errorMsg" class="alert alert-danger text-center" style="display:none;"></div>
+	</form>
+	
 </body>
 </html>
